added header and links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<header>
+    <div><img src="../../assets/Logo.png" alt=""></div>
+    <nav>
+        <a href="#link1">About me</a>
+        <a href="#link2">Skills</a>
+        <a href="#link3">Portfolio</a>
+    </nav>
+</header>
