--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,1 +1,22 @@
-<p>intro works!</p>
+<div class="intro">
+    <img class="intro-img"  src="../../assets/Background.png" alt="picture of person">
+    <div>
+        <p>I am</p>
+        <h1>Gloria Schaffarczyk</h1>
+        <h2>FRONTEND DEVELOPER</h2>
+        <button>Let's talk!</button>
+    </div>
+    <div class="scroll-indicator">
+        <span>Scroll down</span>
+        <div class="arrow">&#x2193;</div> <!-- HTML-Code für den Pfeil -->
+    </div>  
+    <div class="socials">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <span>gloria.schaffarczyk(at)gmail.com</span>
+    </div>  
+</div>
+
+
+
