--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,13 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <app-header></app-header>
+<main class="content-wrapper">
+  <app-intro></app-intro>
+  <app-about-me></app-about-me>
+  <app-skills></app-skills>
+  <app-portfolio></app-portfolio>
+  <app-testimonials></app-testimonials>
+  <app-contact-form></app-contact-form>
+</main>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
