--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* poppins-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../src/assets/fonts/poppins-v21-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 html {
     background-color: #141D2F;
+    font-family: 'Poppins', sans-serif; /* Schriftenname sollte korrekt sein */
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    margin: 0;
+}
+
+/* styles.scss */
+:root {
+    --global-padding: 100px;
+}
+
+.content-wrapper {
+    flex: 1; /* Flexbox sorgt dafür, dass dieser Bereich den verfügbaren Platz füllt */
+    padding: 0px 100px 0px 100px; /* Optional, je nach Design */
+  }
+
+/* In jeder spezifischen Komponente */
+.component {
+    padding-left: var(--global-padding);
+    padding-right: var(--global-padding);
+}
+
+/* Falls eine Komponente einen anderen Abstand benötigt */
+.special-component {
+    padding-left: 0px; /* Spezifische Anpassung */
+    padding-right: 0px;
 }
