--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,57 +1,123 @@
-.intro {
-display: flex;
-background-image: url(../../assets/hero\ character\ photo.png);
-background-repeat: no-repeat;
-}
-
-.intro-img {
-    height: 50%;
-}
-
-p {
-    transform: rotate(270deg) translateY(-180px) translateX(40px); /* Um die Textausrichtung korrekt zu machen */
-}
-
-.scroll-indicator span {
+.content-wrapper {
+    background-color: #141d2f;
+    padding: 0;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+  }
+  
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .image-name-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .curved-background {
+    width: 100vw;
+    height: auto;
+    position: relative; /* Belässt das Bild im normalen Dokumentenfluss */
+    margin-top: -20px; /* Leichte Anpassung nach oben, falls nötig */
+    /* Kein `transform` oder `top` verwendet */
+  }
+  
+  .image-container img {
+    position: relative;
+    max-width: 100%;
+    height: auto;
+    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.5));
+  }
+  
+  .name-plus-cta {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .intro-svg {
+    display: flex;
+    width: 100%;
+    font-size: 2rem;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  h1 {
+    font-size: 4rem;
+    color: #ffffff;
+    font-weight: bold;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+  
+  h2 {
+    font-size: 2rem;
+    color: #b29dd9;
+    margin-top: 0.5rem;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+  
+  .cta-button {
+    background-color: #00bf89;
+    color: #ffffff;
+    padding: 10px 20px;
+    margin: 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1.5rem;
+  }
+  
+  .scroll-indicator {
     position: absolute;
     right: 10px;
-    bottom: 80px;
-    writing-mode: vertical-rl; /* Text vertikal schreiben */
-    text-align: center; /* Zentriert den Text */
-    transform: rotate(360deg); /* Um die Textausrichtung korrekt zu machen */
+    bottom: 20px;
+  }
+  
+  .scroll-indicator span {
+    writing-mode: vertical-rl;
+    text-align: center;
+    transform: rotate(360deg);
     color: #ffffff;
     font-size: 1rem;
     letter-spacing: 0.1em;
-    cursor: pointer; /* Der Benutzer erkennt, dass dies ein interaktives Element ist */
-}
-
-.scroll-indicator .arrow {
+    cursor: pointer;
+  }
+  
+  .scroll-indicator .arrow {
     display: block;
-    position: absolute;
-    right: 15px;
-    bottom: 40px;
-    margin-top: 10px; /* Abstand zwischen Text und Pfeil */
+    margin-top: 10px;
     font-size: 1.5rem;
-    animation: bounce 2s infinite; /* Animation für den Pfeil */
-    transform: rotate(180deg); 
-}
-
-@keyframes bounce {
+    animation: bounce 2s infinite;
+    transform: rotate(180deg);
+  }
+  
+  @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
+      transform: translateY(0);
     }
     40% {
-        transform: translateY(-10px);
+      transform: translateY(-10px);
     }
     60% {
-        transform: translateY(-5px);
+      transform: translateY(-5px);
     }
-}
-
-.intro-graphic {
-    position: absolute;
-    top: 0px;
-    width: 100vw;
-    padding: -100px !important;
-    z-index: -10;
-}
+  }
+  
