--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,123 +1,195 @@
 .content-wrapper {
-    background-color: #141d2f;
-    padding: 0;
-    align-items: center;
-    height: 100vh;
-    position: relative;
+  background-color: #141d2f;
+  padding: 0;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.image-name-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.curved-background {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  top: 850px; /* Beispielwert, kann durch Media Queries angepasst werden */
+  left: 0;
+  z-index: 1; /* Sicherstellen, dass es sich unter anderen Elementen befindet */
+}
+
+.image-container img {
+  position: relative;
+  max-width: 100%;
+  height: auto;
+  filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.5));
+  z-index: 2;
+}
+
+.name-plus-cta,
+.name-plus-cta-mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.intro-svg {
+  display: flex;
+  width: 100%;
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+h1 {
+  font-size: 4rem;
+  color: #ffffff;
+  font-weight: bold;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #b29dd9;
+  margin-top: 0.5rem;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.cta-button {
+  background-color: #00bf89;
+  color: #ffffff;
+  padding: 10px 20px;
+  margin: 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.scroll-indicator {
+  position: absolute;
+  right: 10px;
+  bottom: 20px;
+}
+
+.scroll-indicator span {
+  writing-mode: vertical-rl;
+  text-align: center;
+  transform: rotate(360deg);
+  color: #ffffff;
+  font-size: 1rem;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+}
+
+.scroll-indicator .arrow {
+  display: block;
+  margin-top: 10px;
+  font-size: 1.5rem;
+  animation: bounce 2s infinite;
+  transform: rotate(180deg);
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+.hidden_desktop {
+    display: none;
   }
   
-  .intro {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .image-name-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .curved-background {
-    width: 100vw;
-    height: auto;
-    position: relative; /* Belässt das Bild im normalen Dokumentenfluss */
-    margin-top: -20px; /* Leichte Anpassung nach oben, falls nötig */
-    /* Kein `transform` oder `top` verwendet */
-  }
-  
-  .image-container img {
-    position: relative;
-    max-width: 100%;
-    height: auto;
-    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.5));
-  }
-  
-  .name-plus-cta {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .intro-svg {
-    display: flex;
-    width: 100%;
-    font-size: 2rem;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  h1 {
-    font-size: 4rem;
-    color: #ffffff;
-    font-weight: bold;
-    margin-block-start: 0;
-    margin-block-end: 0;
-  }
-  
-  h2 {
-    font-size: 2rem;
-    color: #b29dd9;
-    margin-top: 0.5rem;
-    margin-block-start: 0;
-    margin-block-end: 0;
-  }
-  
-  .cta-button {
-    background-color: #00bf89;
-    color: #ffffff;
-    padding: 10px 20px;
-    margin: 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 1.5rem;
-  }
-  
-  .scroll-indicator {
-    position: absolute;
-    right: 10px;
-    bottom: 20px;
-  }
-  
-  .scroll-indicator span {
-    writing-mode: vertical-rl;
-    text-align: center;
-    transform: rotate(360deg);
-    color: #ffffff;
-    font-size: 1rem;
-    letter-spacing: 0.1em;
-    cursor: pointer;
-  }
-  
-  .scroll-indicator .arrow {
-    display: block;
-    margin-top: 10px;
-    font-size: 1.5rem;
-    animation: bounce 2s infinite;
-    transform: rotate(180deg);
-  }
-  
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
+  @media (max-width: 992px) {
+    .hidden_desktop {
+      display: flex;
     }
-    40% {
-      transform: translateY(-10px);
+  }
+  
+  .hidden_mobile {
+    display: flex;
+  }
+  
+  @media (max-width: 992px) {
+    .hidden_mobile {
+      display: none;
     }
-    60% {
-      transform: translateY(-5px);
+  }
+  
+
+@media (max-width: 992px) {
+    .intro {
+      flex-direction: column;
+    }
+    
+    .intro-svg {
+      width: 90%;
+      font-size: 1.8rem;
+    }
+    
+    .curved-background {
+      margin-top: -10px;
+    }
+  }
+  
+  @media (max-width: 610px) {
+    .intro-svg {
+      font-size: 1.5rem;
+    }
+    
+    h1 {
+      font-size: 3rem;
+    }
+    
+    h2 {
+      font-size: 1.5rem;
+    }
+  }
+  
+  @media (max-width: 416px) {
+    .intro-svg {
+      font-size: 1.2rem;
+    }
+    
+    h1 {
+      font-size: 2rem;
+    }
+    
+    h2 {
+      font-size: 1.2rem;
+    }
+    
+    .curved-background {
+      top: auto;
+      margin-top: 0;
     }
   }
   
