--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,114 +1,97 @@
+@import "./../../../src/styles/utils.scss";
+@import "./../../../src/styles/variables.scss";
+
 .content-wrapper {
-  background-color: #141d2f;
-  padding: 0;
-  align-items: center;
-  height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .intro {
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 .image-name-wrapper {
+  position: relative;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: center;
   justify-content: center;
   align-items: center;
+}
+
+.image-container {
+  position: relative;
+  z-index: 2; /* Bild hat eine höhere Ebene als das gebogene Element */
+}
+
+.intro-img {
+  height: 25rem;
+  object-fit: cover;
+  margin-inline: auto;
+  z-index: 2;
 }
 
 .curved-background {
-  width: 100vw;
-  height: auto;
-  position: absolute;
-  top: 0px;
-  left: 0;
-  z-index: 1;
-}
-
-.image-container img {
   position: relative;
-  max-width: 100%;
+  width: 100%; /* Passt sich der Breite des Containers an */
   height: auto;
-  filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.5));
-  z-index: 1;
+  z-index: 1; /* Über dem Bild, aber unter dem Text */
+  pointer-events: none;
+  margin-top: -10vh; /* Passt die vertikale Position relativ zur Containerhöhe an */
 }
 
-.name-plus-cta,
-.name-plus-cta-mobile {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
+.name-plus-cta, .name-plus-cta-mobile {
+  position: relative;
+  z-index: 3; /* Text hat die höchste Ebene */
+  text-align: center;
+  margin-top: -5vh; /* Passt die vertikale Position relativ zur Containerhöhe an */
 }
 
-.intro-svg {
-  display: flex;
+.name-plus-cta svg,
+.name-plus-cta-mobile svg {
   width: 100%;
-  font-size: 2rem;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
-h1 {
-  font-size: 4rem;
-  color: #ffffff;
-  font-weight: bold;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
-h2 {
-  font-size: 2rem;
-  color: #b29dd9;
-  margin-top: 0.5rem;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  max-width: 500px;
 }
 
 .cta-button {
-  background-color: #00bf89;
-  color: #ffffff;
-  padding: 10px 20px;
-  margin: 20px;
+  margin-top: 1rem;
+  padding: 1rem 2rem;
+  background-color: #FF3F79;
+  color: #fff;
+  border: none;
   border-radius: 5px;
+  cursor: pointer;
   text-decoration: none;
-  font-size: 1.5rem;
 }
 
 .scroll-indicator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
-  right: 10px;
-  bottom: 20px;
+  bottom: 2rem;
+  z-index: 3;
+  animation: jump 2s ease infinite;
 }
 
 .scroll-indicator span {
-  writing-mode: vertical-rl;
-  text-align: center;
-  transform: rotate(360deg);
-  color: #ffffff;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
   font-size: 1rem;
-  letter-spacing: 0.1em;
-  cursor: pointer;
+  color: #fff;
 }
 
 .scroll-indicator .arrow {
-  display: block;
-  margin-top: 10px;
-  font-size: 1.5rem;
-  animation: bounce 2s infinite;
-  transform: rotate(180deg);
+  font-size: 2rem;
+  color: #fff;
 }
 
-@keyframes bounce {
+/* Animationen */
+@keyframes jump {
   0%,
   20%,
   50%,
@@ -117,79 +100,75 @@ h2 {
     transform: translateY(0);
   }
   40% {
-    transform: translateY(-10px);
+    transform: translateY(-15px);
   }
   60% {
-    transform: translateY(-5px);
+    transform: translateY(-7px);
   }
 }
 
-.hidden_desktop {
-    display: none;
-  }
-  
-  @media (max-width: 992px) {
-    .hidden_desktop {
-      display: flex;
-    }
-  }
-  
-  .hidden_mobile {
-    display: flex;
-  }
-  
-  @media (max-width: 992px) {
-    .hidden_mobile {
-      display: none;
-    }
-  }
-  
+/* Responsive Anpassungen */
 
-@media (max-width: 992px) {
-    .intro {
-      flex-direction: column;
-    }
-    
-    .intro-svg {
-      width: 90%;
-      font-size: 1.8rem;
-    }
-    
-    .curved-background {
-      margin-top: -10px;
-    }
+@media (max-width: 767px) {
+  .hidden_mobile {
+      display: block;
   }
-  
-  @media (max-width: 610px) {
-    .intro-svg {
-      font-size: 1.5rem;
-    }
-    
-    h1 {
-      font-size: 3rem;
-    }
-    
-    h2 {
-      font-size: 1.5rem;
-    }
+
+  .hidden_desktop {
+      display: none;
   }
-  
-  @media (max-width: 416px) {
-    .intro-svg {
-      font-size: 1.2rem;
-    }
-    
-    h1 {
-      font-size: 2rem;
-    }
-    
-    h2 {
-      font-size: 1.2rem;
-    }
-    
-    .curved-background {
-      top: auto;
-      margin-top: 0;
-    }
+}
+
+@media (min-width: 768px) {
+  .image-name-wrapper {
+    flex-direction: row;
+    align-items: center;
   }
-  
+
+  .intro-img {
+    height: 30rem;
+  }
+
+  .curved-background {
+    top: -10%;
+    width: 80%;
+  }
+
+  .name-plus-cta,
+  .name-plus-cta-mobile {
+    margin-top: 0;
+    margin-left: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .intro-img {
+    height: 35rem;
+  }
+
+  .curved-background {
+    top: -15%;
+    width: 70%;
+  }
+
+  .scroll-indicator {
+    right: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .intro-img {
+    height: 40rem;
+  }
+
+  .curved-background {
+    top: -20%;
+    width: 60%;
+  }
+
+  .name-plus-cta,
+  .name-plus-cta-mobile {
+    max-width: 500px;
+    margin-left: 3rem;
+  }
+}
