--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,20 +1,10 @@
-<div class="container">
-    <div class="content-wrapper">
-        <img class="color-overlay" src="../../assets/intro-shadows.png" alt="Color Overlay">
-        <div class="photo">
-            <img src="../../assets/hero character photo.png" alt="Hero Photo">
-        </div>
-        <div class="text-content">
-            <span class="vertical-text">I am</span>
-            <div class="main-text">
-                <h1><span>Dominik Roth</span></h1>
-                <h2>Frontend Developer</h2>
-                <button class="cta-button">Let's talk!</button>
-            </div>
-        </div>
-    </div>
-    <div class="overlap-element">
-        <img src="../../assets/overlapping-image.png" alt="Overlapping Image">
+<div class="custom-container">
+    <div class="custom-element2"></div>
+    <div class="custom-element3"></div>
+    <div class="custom-element4"></div>
+    <div class="custom-element1">
+        <p>Text</p>
+        <button>Button</button>
     </div>
 </div>
 <div class="scroll-indicator">
