--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,99 +1,97 @@
-/* Hauptcontainer */
-.container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start; /* Linksbündig ausgerichtet */
+.custom-container {
+  display: grid;
+  grid-template-areas: 
+    "element4 element1"
+    "element2 element2";
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: 70% 30%;
   height: 100vh;
-  padding-left: 5rem;
-  overflow: hidden;
+  width: calc(100% - 200px);
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
-/* Zweifarbiger Overlay (nur hinter dem Hero-Foto und Text) */
-.color-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 45%; /* Nur Bereich hinter dem Hero-Bereich */
-  height: 100%;
-  z-index: 1; /* Hinter dem Foto */
+.custom-element1 {
+  grid-area: element1;
+  z-index: 3;
+  background-color: lightgreen;
+  padding: 20px;
 }
 
-/* Content-Wrapper */
-.content-wrapper {
-  position: relative;
-  z-index: 4; /* Sicherstellen, dass Inhalt über dem Overlay und Foto liegt */
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  padding: 2rem;
+.custom-element2 {
+  grid-area: element2;
+  background-color: lightblue;
+  width: 100vw;
+  margin-left: -100px;
+  margin-right: -100px;
 }
 
-/* Foto */
-.photo img {
-  max-width: 100%;
-  border-radius: 10px;
-  z-index: 2; /* Foto liegt zwischen Overlay und Text */
-}
-
-/* Vertikal ausgerichteter Text "I am" */
-.vertical-text {
-  writing-mode: vertical-rl;
-  transform: rotate(180deg);
-  font-size: 1.2rem;
-  color: white;
-  margin-right: 1rem;
-  position: relative;
-  z-index: 4; /* Text auf oberster Ebene */
-}
-
-/* Haupttext */
-.main-text {
-  display: block;
-  max-width: 400px; /* Feste Breite für den Textblock */
-  text-align: left;
-  z-index: 4; /* Text über allem */
-}
-
-.main-text h1 {
-  font-size: 2rem;
-  color: white;
-  white-space: nowrap; /* Umbrüche verhindern */
-}
-
-.main-text h1 span {
-  color: #9B3EF7;
-}
-
-.main-text h2 {
-  font-size: 1.5rem;
-  color: #ff4674;
-  white-space: nowrap; /* Umbrüche verhindern */
-}
-
-.cta-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 1rem 2rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  white-space: nowrap; /* Umbrüche verhindern */
-}
-
-/* Überlappendes Element */
-.overlap-element {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%; /* Volle Breite */
-  z-index: 3; /* Zwischen Text und Foto */
-}
-
-.overlap-element img {
+.custom-element3 {
+  grid-area: element4;
+  z-index: 2;
+  background-color: lightcoral;
   width: 100%;
-  height: auto;
+  height: 100%;
+  box-sizing: border-box;
 }
+
+.custom-element4 {
+  grid-area: element4;
+  z-index: 1;
+  background-color: violet;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  opacity: 0.5; /* Sichtbar machen, um die Überlappung zu testen */
+}
+
+@media (max-width: 768px) {
+  .custom-container {
+    grid-template-areas: 
+      "element4"
+      "element1"
+      "element2";
+    grid-template-columns: 1fr; /* Einspaltiges Layout */
+    grid-template-rows: auto;
+    width: calc(100% - 200px); /* Margins links und rechts 100px */
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+
+  .custom-element3 {
+    grid-area: element4;
+    z-index: 2;
+    width: 100%;
+    height: auto;
+    position: relative; /* Sicherstellen, dass es über Element 4 liegt */
+  }
+
+  .custom-element4 {
+    grid-area: element4;
+    z-index: 1;
+    width: 100%; /* Sicherstellen, dass es dieselbe Breite wie Element 3 hat */
+    height: 100%; /* Übernimmt die Höhe von Element 3 */
+    position: relative; /* Stellt sicher, dass es sich direkt hinter Element 3 befindet */
+    opacity: 0.5; /* Sichtbar machen, um die Überlappung zu testen */
+  }
+
+  .custom-element1 {
+    grid-area: element1;
+    width: 100%; /* Gleiche Breite wie Elemente 3 und 4 */
+    max-width: 100%; /* Stellt sicher, dass es nicht breiter als 100% wird */
+    box-sizing: border-box; /* Verhindert, dass Padding die Breite beeinflusst */
+    height: auto;
+    margin: 0;
+  }
+
+  .custom-element2 {
+    grid-area: element2;
+    width: 100vw;
+    margin-left: -100px;
+    margin-right: -100px;
+  }
+}
+
 
 /* Scroll-Indikator */
 .scroll-indicator {
@@ -132,23 +130,3 @@
   }
 }
 
-/* Responsive Layout */
-@media (max-width: 768px) {
-  .content-wrapper {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .main-text {
-    max-width: none; /* Keine Begrenzung der Breite im Hochformat */
-  }
-
-  .vertical-text {
-    display: none; /* Optional: Vertikaler Text im Hochformat ausblenden */
-  }
-
-  .color-overlay {
-    width: 100%; /* Sicherstellen, dass der Hintergrund auf mobilen Geräten angepasst wird */
-  }
-}
