--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
-    <div class="custom-element2"></div>
-    <div class="custom-element3"></div>
-    <div class="custom-element4"></div>
+    <div class="custom-element2"><img src="../../assets/overlapping-image.png"></div>
+    <div class="custom-element3"><img src="../../assets/hero character photo.png"></div>
+    <div class="custom-element4"><img src="../../assets/intro-shadows.png"></div>
     <div class="custom-element1">
         <p>Text</p>
         <button>Button</button>
