--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,22 +1,56 @@
 .custom-container {
   display: grid;
-  grid-template-areas: 
+  grid-template-areas:
     "element4 element1"
     "element2 element2";
-  grid-template-columns: 1fr 1fr; 
-  grid-template-rows: 55% 45%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 70% 30%;
   height: 100vh;
-  width: calc(100% - 200px);
-  margin-left: 100px;
-  margin-right: 100px;
+  max-width: 100vw;
+  margin: 0 auto; /* Zentrieren */
+  box-sizing: border-box;
 }
 
 .custom-element1 {
   grid-area: element1;
   display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
   z-index: 3;
-  // background-color: lightgreen;
-  padding: 20px;
+  padding: 0 100px 0 0;
+  box-sizing: border-box;
+}
+
+.custom-element2 {
+  grid-area: element2;
+  z-index: 2;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: visible;
+}
+
+.custom-element2 img {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: auto;
+  object-fit: cover;
+}
+
+.custom-element3 {
+  grid-area: element4;
+  z-index: 1;
+  width: auto;
+  height: 100%;
+  padding: 0 0 0 100px;
+  margin-top: 65px;
+  box-sizing: border-box;
+  display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-content: center;
@@ -24,61 +58,61 @@
   align-items: center;
 }
 
-.custom-element2 {
-  grid-area: element2;
-  z-index: 2; /* Legt es leicht über andere Elemente, außer Scroll-Indikator */
-  // background-color: lightblue;
-  width: 100vw;
-  margin-left: -100px;
-  margin-right: -100px;
-  margin-top: -220px; /* Leichtes Überlappen über die obere Kante */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: visible; /* Erlaubt das Überlappen */
-}
-
-.custom-element2 img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-.custom-element3, .custom-element3 img {
+.custom-element3 img {
   grid-area: element4;
   z-index: 1;
-  // background-color: lightcoral;
   width: auto;
   height: 100%;
-  box-sizing: border-box;
+  padding: 0;
 }
 
-.custom-element4, .custom-element4 img {
+.custom-element4 {
   grid-area: element4;
   z-index: 0;
-  // background-color: violet;
   width: auto;
   height: 100%;
+  padding: 0 0 0 100px;
+  margin-top: 65px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-element4 img {
+  grid-area: element4;
+  z-index: 1;
+  width: auto;
+  height: 100%;
+  padding: 0;
+}
+
+.custom-element1 svg {
+  width: 100%;
+  max-width: 742px;
+  height: auto;
 }
 
 @media (max-width: 768px) {
   .custom-container {
-    grid-template-areas: 
+    grid-template-areas:
       "element4"
       "element1"
       "element2";
     grid-template-columns: 1fr; /* Einspaltiges Layout */
     grid-template-rows: auto;
-    width: calc(100% - 200px); /* Margins links und rechts 100px */
-    margin-left: 100px;
-    margin-right: 100px;
+    height: 100vh;
+    max-width: 100vw;
   }
 
   .custom-element3 {
     grid-area: element4;
     z-index: 2;
     width: 100%;
+    padding: 0 0 0 50px;
     height: auto;
     position: relative; /* Sicherstellen, dass es über Element 4 liegt */
   }
@@ -87,6 +121,7 @@
     grid-area: element4;
     z-index: 1;
     width: 100%; /* Sicherstellen, dass es dieselbe Breite wie Element 3 hat */
+    padding: 0 0 0 50px;
     height: 100%; /* Übernimmt die Höhe von Element 3 */
     position: relative; /* Stellt sicher, dass es sich direkt hinter Element 3 befindet */
   }
@@ -97,6 +132,7 @@
     max-width: 100%; /* Stellt sicher, dass es nicht breiter als 100% wird */
     box-sizing: border-box; /* Verhindert, dass Padding die Breite beeinflusst */
     height: auto;
+    padding: 0 50px 0 0;
     margin: 0;
   }
 
@@ -108,6 +144,20 @@
   }
 }
 
+button {
+  display: flex;
+  padding: 15px 30px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border: none;
+  background: #00BF89;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 23px;
+  font-style: normal;
+  line-height: 120%;
+}
 
 /* Scroll-Indikator */
 .scroll-indicator {
@@ -135,7 +185,11 @@
 
 /* Animation */
 @keyframes jump {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
   40% {
