--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -20,6 +20,12 @@
 </div>
 <div class="social-media-and-contact">
     <div class="intro-line"></div>
+    <div class="intro-contact-symbols">
+        <img src="../../assets/github.png" alt="">
+        <img src="../../assets/email.png" alt="">
+        <img src="../../assets/linkedin.png" alt="">
+        <span><a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a></span>
+    </div>
 </div>
 <div class="scroll-indicator">
     <span>Scroll down</span>
