--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -101,6 +101,26 @@
   position: absolute;
   left: 0;
   bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.intro-contact-symbols {
+  z-index: 4;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding-left: 200px;
+}
+
+.intro-contact-symbols a {
+  text-decoration: none;
+  color: white;
 }
 
 .intro-line {
@@ -172,8 +192,6 @@ button {
   color: #fff;
   font-family: Poppins;
   font-size: 23px;
-  font-style: normal;
-  line-height: 120%;
 }
 
 /* Scroll-Indikator */
@@ -190,7 +208,7 @@ button {
 
 .scroll-indicator span {
   writing-mode: vertical-lr;
-  transform: rotate(180deg);
+  transform: rotate(0deg);
   font-size: 1rem;
   color: #fff;
 }
