--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -7,8 +7,11 @@
   grid-template-rows: 70% 30%;
   height: 100vh;
   max-width: 100vw;
-  margin: 0 auto; /* Zentrieren */
+  margin: 0 auto;
   box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  justify-items: stretch;
 }
 
 .custom-element1 {
