added about me section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,27 @@
-<p>about-me works!</p>
+<div class="about-me-container">
+    <div class="about-me-left">
+        <h1>About me</h1>
+        <p>Hey there! I'm Simon, a frontend developer fueled by a
+            passion for crafting user-friendly digital experiences.
+            With a talent for problem-solving and an eye for detail,
+            I specialize in translating complex ideas into elegant designs.
+        </p>
+        <p>Let's connect and create something amazing together!</p>
+        <div class="about-me-bullet-points">
+            <div class="about-me-bullet-point"><img src="../../assets/location.png" alt="">
+                <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and remotely.</p>
+            </div>
+            <div class="about-me-bullet-point"><img src="../../assets/lightbulb.png" alt="">
+                <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge and skills.</p>
+            </div>
+            <div class="about-me-bullet-point"><img src="../../assets/puzzle.png" alt="">
+                <p>In my profession, programming isn't just about writing code; it's a creative form of problem-solving. 
+                    I take pride in my ability to distill complex technical challenges into simple, user-friendly solutions. 
+                    This way, I help you achieve your goals and bring your visions to life.
+                </p>
+            </div>
+        </div>
+
+    </div>
+    <div class="about-me-right">right</div>
+</div>
