added picture and line to about me

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -23,5 +23,8 @@
         </div>
 
     </div>
-    <div class="about-me-right">right</div>
+    <div class="about-me-right">
+        <img src="../../assets/picture_in_circle.png" alt="">
+        <div class="circle-picture-line"></div>
+    </div>
 </div>
