added picture and line to about me and modified it

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -24,7 +24,6 @@
 
     </div>
     <div class="about-me-right">
-        <img src="../../assets/picture_in_circle.png" alt="">
-        <div class="circle-picture-line"></div>
+        <img src="../../assets/Group.png" class="about-me-group" alt="">
     </div>
 </div>
