--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,52 +2,63 @@
   z-index: 4;
   height: 80vh;
   position: relative;
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   flex-direction: row;
 }
 
 .about-me-left {
   height: 80vh;
-  width: 100%;
-  border: 1px solid blue;
+  width: 90%;
+  // border: 1px solid blue;
   padding-left: 100px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .about-me-right {
   height: 80vh;
   width: 100%;
-  border: 1px solid greenyellow;
+  // border: 1px solid greenyellow;
 }
 
 .about-me-bullet-points {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  justify-content: center;
+
+  > .about-me-bullet-point {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
-
-    > .about-me-bullet-point {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-        gap: 24px;
-        > p {
-            padding-left: 16px;
-            display: flex;
-        }
+    align-items: center;
+    gap: 24px;
+    > p {
+      padding-left: 16px;
+      display: flex;
     }
+  }
 }
 
-.circle-picture-line {
+// .circle-picture-line {
+//   position: absolute;
+//   right: 0;
+//   top: 200px;
+//   border: 0;
+//   border-top: 4px solid #00bf89;
+//   border-top-left-radius: 20px;
+//   border-bottom-left-radius: 20px;
+//   width: 350px;
+// }
+
+.about-me-group {
   position: absolute;
   right: 0;
   top: 200px;
-  border: 0;
-  border-top: 4px solid #00BF89;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  width: 350px;
 }
