--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,13 +8,13 @@
         </p>
         <p>Let's connect and create something amazing together!</p>
         <div class="about-me-bullet-points">
-            <div class="about-me-bullet-point"><img src="../../assets/location.png" alt="">
+            <div class="about-me-bullet-point"><img src="../../assets/about-me-icon-location.png" alt="">
                 <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and remotely.</p>
             </div>
-            <div class="about-me-bullet-point"><img src="../../assets/lightbulb.png" alt="">
+            <div class="about-me-bullet-point"><img src="../../assets/about-me-icon-lightbulb.png" alt="">
                 <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge and skills.</p>
             </div>
-            <div class="about-me-bullet-point"><img src="../../assets/puzzle.png" alt="">
+            <div class="about-me-bullet-point"><img src="../../assets/about-me-icon-puzzle.png" alt="">
                 <p>In my profession, programming isn't just about writing code; it's a creative form of problem-solving. 
                     I take pride in my ability to distill complex technical challenges into simple, user-friendly solutions. 
                     This way, I help you achieve your goals and bring your visions to life.
@@ -24,6 +24,6 @@
 
     </div>
     <div class="about-me-right">
-        <img src="../../assets/Group.png" class="about-me-group" alt="">
+        <img src="../../assets/about-me-icon-group.png" class="about-me-group" alt="">
     </div>
 </div>
