--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div><img src="../../assets/Logo.png" alt=""></div>
+    <div><img src="../../assets/logo.png" alt=""></div>
     <nav>
         <a href="#link1">About me</a>
         <a href="#link2">Skills</a>
