--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="custom-container">
-    <div class="custom-element2"><img src="../../assets/overlapping-image.png"></div>
-    <div class="custom-element3"><img src="../../assets/hero character photo.png"></div>
+    <div class="custom-element2"><img src="../../assets/intro-overlapping-image.png"></div>
+    <div class="custom-element3"><img src="../../assets/intro-hero-character-photo.png"></div>
     <div class="custom-element4"><img src="../../assets/intro-shadows.png"></div>
     <div class="custom-element1">
         <svg class="full-name" width="100%" height="auto" viewBox="0 0 742 162" fill="none"
@@ -21,9 +21,9 @@
 <div class="social-media-and-contact">
     <div class="intro-line"></div>
     <div class="intro-contact-symbols">
-        <img src="../../assets/github.png" alt="">
-        <img src="../../assets/email.png" alt="">
-        <img src="../../assets/linkedin.png" alt="">
+        <img src="../../assets/intro-icon-github.png" alt="">
+        <img src="../../assets/intro-icon-email.png" alt="">
+        <img src="../../assets/intro-icon-linkedin.png" alt="">
         <span><a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a></span>
     </div>
 </div>
