deleted some commenta

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -32,9 +32,9 @@
 
 /* Symbole */
 .skills-symbols img {
-  max-width: 70px; /* Initial kleinere Symbole */
+  max-width: 70px; 
   max-height: 70px;
-  object-fit: contain; /* Passt die Größe an und verhindert Überlappen */
+  object-fit: contain; 
 }
 
 .skills-text-and-button {
