skills section is almost ready

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -144,7 +144,7 @@
     }
   
     .skills-symbols img {
-      max-width: 40px; /* Minimalste Symbolgröße für sehr kleine Bildschirme */
+      max-width: 40px;
       max-height: 40px;
     }
   }
