--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -42,7 +42,6 @@
   max-width: 50%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 .project-container.reverse-layout .project-details {
@@ -57,12 +56,12 @@
 }
 
 h2 {
-    color: #ff007f;
+    color: #FF3F79;
 }
 
 .project-links {
   display: flex;
-  gap: 20px;
+  gap: 40px;
 }
 
 .btn-live-test,
@@ -73,12 +72,12 @@ h2 {
 }
 
 .btn-live-test {
-  background-color: #ff007f;
+  background-color: #FF3F79;
   color: white;
 }
 
 .btn-github {
   background-color: transparent;
   border: 2px solid #00bf89;
-  color: #00bf89;
+  color: #ffffff;
 }
