rearranged and renamed portfolio

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-container">
+<div class="about-me-section">
     <div class="about-me-left">
         <h1>About me</h1>
         <p>Hey there! I'm Simon, a frontend developer fueled by a
