--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,8 +1,8 @@
-<div class="custom-container">
-    <div class="custom-element2"><img src="../../assets/intro-overlapping-image.png"></div>
-    <div class="custom-element3"><img src="../../assets/intro-hero-character-photo.png"></div>
-    <div class="custom-element4"><img src="../../assets/intro-shadows.png"></div>
-    <div class="custom-element1">
+<div class="intro-section">
+    <div class="intro-element2"><img src="../../assets/intro-overlapping-image.png"></div>
+    <div class="intro-element3"><img src="../../assets/intro-hero-character-photo.png"></div>
+    <div class="intro-element4"><img src="../../assets/intro-shadows.png"></div>
+    <div class="intro-element1">
         <svg class="full-name" width="100%" height="auto" viewBox="0 0 742 162" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
