--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-container">
+<div class="portfolio-section">
     <h1>Portfolio</h1>
     <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
     @for (project of projects; track project.title) {
