--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="skills-container">
+<div class="skills-section">
     <div class="skills-symbols">
       @for (skill of skills; track skill.name) {
         <div class="skills-icon-and-name">
