--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -1,103 +1,119 @@
 .testimonial-container {
-    display: flex;
-    flex-direction: column;
-    margin-top: 100px;
-    width: 100%;
-    height: 420px;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
-    overflow: hidden;
-    border: 1px solid yellow;
-  }
-  
-  .testimonial-wrapper {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    width: 100%;
-    height: 350px;
-    border: 1px solid rgb(0, 110, 255);
-    flex-direction: row;
-    align-content: center;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .single-testimonial {
-    flex: 0 0 100%;
-    display: flex;
-    height: 300px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 64px;
-    padding: 24px;
-    box-sizing: border-box;
-  }
-  
-  .quote-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    border: 3px solid #00bf89;
-    border-radius: 25px;
-    padding: 24px;
-    width: 50vw;
-  }
-  
-  .quote-author {
-    color: #ff3f79;
-  }
-  
-  .quotation-mark-image {
-    position: absolute;
-    left: -70px;
-    top: -30px;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  width: 100%;
+  height: 420px;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid yellow;
+}
 
-  .testimonial-navigation {
-    position: absolute;
-    bottom: 20px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
+.testimonial-wrapper {
+  display: flex;
+  // transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 350px;
+  border: 1px solid rgb(0, 110, 255);
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-around;
+  align-items: center;
+}
 
-.arrowLeft, .arrowRight {
-    background-color: transparent;
-    border: none;
-    padding: 10px 20px;
-    color: #00bf89;
-    font-size: 24px;
-    cursor: pointer;
-    z-index: 2;
+.single-testimonial {
+  flex: 0 0 100%;
+  display: flex;
+  height: 300px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 64px;
+  padding: 24px;
+  box-sizing: border-box;
+}
+
+.quote,
+.testimonial-img img {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .arrowLeft:hover, .arrowRight:hover {
-    color: #ffffff;
+  to {
+    opacity: 1;
   }
-  
-  /* Dots Styles */
-  .dots {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .dots span {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-  }
-  
-  .active-dot {
-    background-color: #00bf89;
-  }
-  
-  .inactive-dot {
-    background-color: #ff3f79;
-  }
-  
+}
+
+.quote-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border: 3px solid #00bf89;
+  border-radius: 25px;
+  padding: 24px;
+  width: 50vw;
+}
+
+.quote-author {
+  color: #ff3f79;
+}
+
+.quotation-mark-image {
+  position: absolute;
+  left: -70px;
+  top: -30px;
+}
+
+.testimonial-navigation {
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrowLeft,
+.arrowRight {
+  background-color: transparent;
+  border: none;
+  padding: 10px 20px;
+  color: #00bf89;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.arrowLeft:hover,
+.arrowRight:hover {
+  color: #ffffff;
+}
+
+/* Dots Styles */
+.dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.dots span {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.active-dot {
+  background-color: #00bf89;
+}
+
+.inactive-dot {
+  background-color: #ff3f79;
+}
